2003-11-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-image.c (nr_arena_image_init): Mark
	render_opacity

	* src/widgets/button.h: Added SELECT mode

	* src/widgets/button.c (sp_button_button_release): Ditto
	(sp_button_menu_selection_done): Ditto

2003-11-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/align.c (sp_quick_align_dialog): Fixed tooltip typo

2003-11-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/document-undo.c (sp_document_undo): Begin transaction
	even if current list is empty (fixes disappearing undo bug)
	(sp_document_redo): Ditto

2003-11-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libarikkei/arikkei-strlib.c: New file, implement localeless
	strtod and dtostr here

	* src/libarikkei/arikkei-strlib.h: New file

2003-11-15  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-object.c (sp_object_build): Parse xml:space
	(sp_object_private_set): Ditto
	(sp_xml_get_space_string): New helper
	(sp_object_private_write): Write xml:space

	* src/sp-object.h: Added xml:space attribute

	* src/sp-text.c: Handle xml:space

	* src/xml/repr-io.c: Parse xml:space

2003-11-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/desktop-properties.c (sp_dtw_update): Added page and
	border colors

	* src/sp-namedview.c (sp_namedview_set): Parse page and border colors

	* src/desktop.c (sp_dt_namedview_modified): Set page and border colors

2003-11-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.h: Use NRPixBlock in canvas buffer

2003-11-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-types.h: Separate cases for HAVE_INTTYPES_H,
	HAVE_NR_CONFIG_H and remaining (i.e. Win32)

	* src/libnr/nr-compose.c: Wrap config.h into HAVE_CONFIG_H

	* src/libnr/nr-compose-transform.c: Ditto

	* src/dialogs/transformation.c (sp_transformation_dialog_new): Added
	'Apply to duplicate' checkbox
	(sp_transformation_dialog_apply): Test for duplication